[package]
name = "euclid"
version = "0.19.0"
authors = ["The Servo Project Developers"]
description = "Geometry primitives"
documentation = "https://docs.rs/euclid/"
repository = "https://github.com/servo/euclid"
keywords = ["matrix", "vector", "linear-algebra", "geometry"]
categories = ["science"]
license = "MIT / Apache-2.0"

[features]
minted = ["mint"]
unstable = []

[dependencies]
num-traits = { version = "0.2" }
serde = { version = "1.0", features = ["serde_derive"], optional = true }
mint = {version = "0.5", optional = true}

[dev-dependencies]
rand = "0.4"
serde_test = "1.0"
