[package]
name = "euclid"
version = "0.19.9"
authors = ["The Servo Project Developers"]
description = "Geometry primitives"
documentation = "https://docs.rs/euclid/"
repository = "https://github.com/servo/euclid"
keywords = ["matrix", "vector", "linear-algebra", "geometry"]
categories = ["science"]
license = "MIT / Apache-2.0"

[features]
unstable = []

[dependencies]
euclid_macros = { path = "./macros", version = "0.1" }
num-traits = { version = "0.2" }
serde = { version = "1.0", features = ["serde_derive"], optional = true }
mint = {version = "0.5.1", optional = true}

[dev-dependencies]
rand = "0.4"
serde_test = "1.0"